--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -1,31 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Profile</title>
 
-  <!-- CSS  -->
-  <link href="{% static 'https://fonts.googleapis.com/icon?family=Material+Icons' %}" rel="stylesheet">
-  <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
+{% block content %}
   <div class="container">
     <div class="section">
       <div class="row">
@@ -53,28 +29,21 @@
           <ul class="collection">
 
             <li class="collection-item avatar">
-              <i class="material-icons circle blue">rate_review</i>
-              <span class="title">Games Reviewed</span>
-              <p class="center-align"><b>10</b></p>
-              <a href="#!" class="secondary-content"><b>Show</b></a>
-            </li>
-
-            <li class="collection-item avatar">
-              <i class="material-icons circle green">folder</i>
+              <i class="material-icons circle green">rate_review</i>
               <span class="title">Comments</span>
               <p class="center-align"><b>5</b></p>
               <a href="#!" class="secondary-content"><b>Show</b></a>
             </li>
 
             <li class="collection-item avatar">
-              <i class="material-icons circle red">folder</i>
+              <i class="material-icons circle red">rate_review</i>
               <span class="title">Rated</span>
               <p class="center-align"><b>5</b></p>
               <a href="#!" class="secondary-content"><b>Show</b></a>
             </li>
 
                <li class="collection-item avatar">
-              <i class="material-icons circle purple">folder</i>
+              <i class="material-icons circle purple">games</i>
               <span class="title">Visits per days</span><p class="center-align"><b>{{ request.COOKIES.homepage_visits|default:"0" }}</b></p>
 <!--              <a href="#!" class="secondary-content"><b>Show</b></a>-->
             </li>
@@ -113,50 +82,4 @@
 </div>
 </div>
 </div>
-
-
-
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
-
-
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="{% static 'js/materialize.js'%}"></script>
-  <script src="{% static 'js/init.js'%}"></script>
-
-  </body>
-</html>
+{% endblock %}
