--- a/iadsapp/static/css/style.css
+++ b/iadsapp/static/css/style.css
@@ -75,3 +75,16 @@ footer.page-footer {
   left: 35%;
   top: 50%;
 }
+
+#img-custom-circle-actor1 {
+  position: absolute;
+  max-width: 30%;
+  height: 40%;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: white;
+  border-width: 5px;
+  z-index: 1;
+  left: 35%;
+  top: 50%;
+}
