--- a/iadsapp/templates/edit_user.html
+++ b/iadsapp/templates/edit_user.html
@@ -11,7 +11,7 @@
     <style>
         .profile-pic{
             max-width: 200px;
-            max-height:200px;
+            max-height: 200px;
             margin: 0 auto;
             border-radius: 50%;
         }
@@ -27,29 +27,45 @@
                     <hr>
                     <h3 style="text-align: center">Account Settings</h3>
                     <hr>
-                    <img class="profile-pic" src="{{request.user.customer.profile_pic.url}}" >
-
-                    {% if request.user.customer.profile_pic %}
-            <img class="profile-pic" src="{{ request.user.profile_pic.url }}" >
-        {% else %}
-            <img class="profile-pic" src="{% static 'img/user.png' %}" alt="Default Profile Pic">
-        {% endif %}
+                    {% if custom_user.profile_pic %}
+                        <img class="profile-pic" src="{{ custom_user.profile_pic.url }}" >
+                    {% else %}
+                        <img class="profile-pic" src="{% static 'img/user.png' %}" alt="Default Profile Pic">
+                    {% endif %}
                 </div>
             </div>
             <div class="col-md-9">
                 <div class="card card-body">
                     <form method="POST" action="" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{form.as_p}}
-                        <input class="btn btn-primary" type="submit" name="Update Information">
+                        <div class="form-group">
+                            <label for="id_username">Username</label>
+                            <input type="text" class="form-control" id="id_username" name="username" value="{{ request.user.username }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="id_first_name">First Name</label>
+                            <input type="text" class="form-control" id="id_first_name" name="first_name" value="{{ request.user.first_name }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="id_last_name">Last Name</label>
+                            <input type="text" class="form-control" id="id_last_name" name="last_name" value="{{ request.user.last_name }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="id_email">Email</label>
+                            <input type="email" class="form-control" id="id_email" name="email" value="{{ request.user.email }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="id_bio">Bio</label>
+                        {{ form.bio }}
+                        {{ form.profile_pic }}
+                         </div>
+                        <input class="btn btn-primary" type="submit" value="Update Information">
                     </form>
                 </div>
             </div>
         </div>
     </div>
     <hr>
-
-
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
