--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -9,7 +9,13 @@
           <div class="card">
             <div class="card-image">
               <img src="{% static 'img/icons/gamebanner.jpg' %}">
-              <img id="img-custom-circle-actor" src="{% static 'img/user.png'%}">
+                 {% if custom_user.profile_pic %}
+                        <!--<img class="profile-pic" src="{{ custom_user.profile_pic.url }}" >-->
+                        <img id="img-custom-circle-actor1" src="{{ custom_user.profile_pic.url }}" alt="Profile Pic">
+                    {% else %}
+                        <img id="img-custom-circle-actor" src="{% static 'img/user.png' %}" alt="Default Profile Pic">
+                    {% endif %}
+              <!--<img id="img-custom-circle-actor" src="{% static 'img/user.png'%}">-->
               <span style="font-size: 30px;" class="card-title">{{ user.first_name }}</span>
             </div>
           <div class="card-content">
@@ -19,7 +25,7 @@
               <li class="collection-header"><h3>User Information</h3></li>
               <li class="collection-item">Name:<b>{{ user.first_name }}</b></li>
               <li class="collection-item">Email: <a><b>{{ user.email }}</b></a></li>
-              <li class="collection-item">Bio:<p><b>We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated. </b></p></li>
+              <li class="collection-item">Bio:<p><b>{{ custom_user.bio }} </b></p></li>
 
             </ul>
               <a href="{% url 'edit_profile' %}" class="btn">Edit Profile</a>
