--- a/iadsapp/templates/game_details.html
+++ b/iadsapp/templates/game_details.html
@@ -84,18 +84,101 @@
                     <a href="#!" class="secondary-content"><i class="material-icons", style="color: #4DD0ED;">grade</i></a>
                   </li>
                   </ul>
-                  <br>
-                  <center><div>
-                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">
-                      star
-                      </span></i>Rate</a>
-                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">
-                      playlist_add
-                      </span></i>Watchlist</a>
-                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">
-                      playlist_add_check
-                      </span></i>Watched</a>
-                    </div></center>
+{#                  <br>#}
+{#                  <center><div>#}
+{#                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">#}
+{#                      star#}
+{#                      </span></i>Rate</a>#}
+{#                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">#}
+{#                      playlist_add#}
+{#                      </span></i>Watchlist</a>#}
+{#                    <a class="cyan btn"><i class="material-icons left"><span class="material-symbols-outlined">#}
+{#                      playlist_add_check#}
+{#                      </span></i>Watched</a>#}
+{#                    </div></center>#}
+
+                    <!-- Add this form for rating and commenting -->
+                    <!-- Add this form for rating and commenting -->
+{#            <form method="post">#}
+{#    {% csrf_token %}#}
+{#    <div class="input-field">#}
+{#        {{ form.ratings.label_tag }}#}
+{#        <br>#}
+{#        {{ form.ratings }}#}
+{#    </div>#}
+{#    <div class="input-field">#}
+{#        {{ form.comments.label_tag }}#}
+{#        <br>#}
+{#        {{ form.comments }}#}
+{#    </div>#}
+{#    <button type="submit" class="btn">Submit</button>#}
+{#</form>#}
+   
+
+                  <h4>User Reviews:</h4>
+<!-- Display ratings and comments -->
+{#<div>#}
+{#    <p>Ratings: {{ game.ratings }}</p>#}
+{#    <p>Comments: {{ game.comments }}</p>#}
+{#</div>#}
+{#                    <form method="post">#}
+{#    {% csrf_token %}#}
+{#    {% if user.is_authenticated %}#}
+{#    <div class="input-field">#}
+{#        {{ form.ratings.label_tag }}#}
+{#        <br>#}
+{#        {{ form.ratings }}#}
+{#    </div>#}
+{#    <div class="input-field">#}
+{#        {{ form.comments.label_tag }}#}
+{#        <br>#}
+{#        {{ form.comments }}#}
+{#    </div>#}
+{#    <button type="submit" class="btn">Submit</button>#}
+{#    {% else %}#}
+{#    <h6><p>Please <a href="{% url 'signin' %}">login</a> to rate and comment.</p></h6>#}
+{#    {% endif %}#}
+{#</form>#}
+
+<!-- Display existing comments -->
+<h3>Comments</h3>
+{% for comment in comments %}
+    <p>{{ comment.comment }} - {{ comment.user.username }}, {{ comment.created_at }}</p>
+{% empty %}
+    <p>No comments yet.</p>
+{% endfor %}
+
+<!-- Display existing ratings -->
+<h3>Ratings</h3>
+{% for rating in ratings %}
+    <p>{{ rating.rating }} - {{ rating.user.username }}, {{ rating.created_at }}</p>
+{% empty %}
+    <p>No ratings yet.</p>
+{% endfor %}
+
+<!-- Add new comment and rating -->
+              
+              
+<form method="post">
+    {% csrf_token %}
+    {% if user.is_authenticated %}
+    <div class="input-field">
+        {{ form.ratings.label_tag }}
+        <br>
+        {{ form.ratings }}
+    </div>
+    <div class="input-field">
+        {{ form.comments.label_tag }}
+        <br>
+        {{ form.comments }}
+    </div>
+    <button type="submit" class="btn">Submit</button>
+    {% else %}
+        <br>
+    <p>Please <a href="{% url 'signin' %}">login</a> to rate and comment.</p>
+    {% endif %}
+</form>
+              
               </div>
             </div>
           </div>
