Changed creds of forgot password account

--- a/iadsapp/templates/forgot_password.html
+++ b/iadsapp/templates/forgot_password.html
@@ -3,10 +3,13 @@
 {% block title %}Forgot Password{% endblock %}
 
 {% block content %}
-    <h2>Forgot Password</h2>
-    <form method="post">
+<div style="display: flex; justify-content: center; align-items: center; height: 80vh; flex-direction: column;">
+    <h5 style="margin-bottom: 20px;">Forgot Password</h5>
+    <form method="post" style="width: 300px;">
         {% csrf_token %}
-        {{ form.as_p}}
-        <button type="submit">Reset Password</button>
+        <label for="email" style="margin-bottom: 5px;">Email:</label><br>
+        <input type="email" id="email" name="email" style="padding: 5px; margin-bottom: 10px; width: 100%; border: 1px solid #ccc; border-radius: 5px;">
+        <button type="submit" style="padding: 10px; background-color: #007bff; color: #fff; border: none; border-radius: 5px; cursor: pointer;">Reset Password</button>
     </form>
+</div>
 {% endblock %}
