--- a/iadsapp/templates/base.html
+++ b/iadsapp/templates/base.html
@@ -14,15 +14,15 @@
 </head>
 <body>
 <ul id="dropdown1" class="dropdown-content">
-            <li><a href="{% url 'top100_games' %}">Top 100 Games</a></li>
-            <li><a href="{% url 'most_popular_games' %}">Most Popular</a></li>
-            <li><a href="{% url 'game_type' %}">Games by Genre</a></li>
-            <li><a href="{% url 'awards_list' %}">Awards</a></li>
+            <li><a class="blue-grey-text darken-3" href="{% url 'top100_games' %}">Top 100 Games</a></li>
+            <li><a class="blue-grey-text darken-3" href="{% url 'most_popular_games' %}">Most Popular</a></li>
+            <li><a class="blue-grey-text darken-3" href="{% url 'game_type' %}">Games by Genre</a></li>
+            <li><a class="blue-grey-text darken-3" href="{% url 'awards_list' %}">Awards</a></li>
             <li class="divider"></li>
-            <li><a href="{% url 'upcoming_releases' %}">Calendar</a></li>
-            <li><a href="{% url 'game_news' %}">Games News</a></li>
-        </ul>
-<nav class="light-blue">
+            <li><a class="blue-grey-text darken-3" href="{% url 'upcoming_releases' %}">Calendar</a></li>
+            <li><a class="blue-grey-text darken-3" href="{% url 'game_news' %}">Games News</a></li>
+</ul>
+<nav class="blue-grey darken-4">
     <div class="nav-wrapper">
         <style>
             .brand-logo img {
@@ -36,13 +36,13 @@
         <ul class="right hide-on-med-and-down">
             {% if user.is_authenticated %}
                 <!-- If user is authenticated, show Profile -->
-                <li><a href="{% url 'profilepage_view' %}">Profile</a></li>
+                <li><a class="white-text" href="{% url 'profilepage_view' %}">Profile</a></li>
             {% else %}
                 <!-- If user is not authenticated, show Sign Up -->
-                <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                <li><a class="white-text" href="{% url 'signup' %}">Sign Up</a></li>
             {% endif %}
             <!-- Dropdown Trigger -->
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-trigger white-text" href="#!" data-target="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
         <!-- Dropdown Structure -->
 
@@ -52,7 +52,7 @@
 {% block content %}
 {% endblock %}
 
-<footer class="page-footer cyan">
+<footer class="page-footer blue-grey darken-4">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
