--- a/iadsapp/templates/signin.html
+++ b/iadsapp/templates/signin.html
@@ -1,10 +1,47 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<h2>Sign In</h2>
-<form method="post" action="{% url 'signin' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign In</button>
-</form>
-{% endblock %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - GameCriticHub</title>
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}">
+</head>
+<body>
+    <div class="signup-container">
+        <h1 class="project-name">GameCriticHub</h1>
+        <h2>Sign Up</h2>
+        <form method="post" action="{% url 'signup' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username }}
+            </div>
+            <div class="form-group">
+                {{ form.first_name.label_tag }}
+                {{ form.first_name }}
+            </div>
+            <div class="form-group">
+                {{ form.last_name.label_tag }}
+                {{ form.last_name }}
+            </div>
+            <div class="form-group">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                {{ form.password1.label_tag }}
+                {{ form.password1 }}
+            </div>
+            <div class="form-group">
+                {{ form.password2.label_tag }}
+                {{ form.password2 }}
+            </div>
+            <button type="submit" class="btn-signup">Sign Up</button>
+        </form>
+        <div class="existing-account">
+            <p>Already have an account? <a href="{% url 'signin' %}">Sign In</a></p>
+        </div>
+    </div>
+</body>
+</html>
