--- a/iadsapp/templates/awards_list.html
+++ b/iadsapp/templates/awards_list.html
@@ -6,33 +6,27 @@
 {% endblock %}
 
 {% block content %}
-<div style="max-width: 100%; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); background: linear-gradient(to right, #FFD700, #000000); color: #FFFFFF;">
+<div style="max-width: 100%; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); background: url('{% static 'awards2.jpg' %}') no-repeat center center / cover; color: #FFFFFF;">
 
     <h1 style="text-align: left; font-family: 'Arial', sans-serif; margin-bottom: 30px;">Awards List</h1>
 
     <!-- Search box aligned to the right -->
     <div style="display: flex; justify-content: flex-end; margin-bottom: 20px;">
         <form method="GET" action="{% url 'awards_list' %}" style="display: flex; align-items: center;">
-            <input type="text" name="search" placeholder="Search" style="width: 200px; padding: 10px; border: 2px solid #FFD700; border-radius: 5px; font-size: 16px; font-family: 'Arial', sans-serif; background-color: transparent; color: #FFFFFF;">
-            <button type="submit" style="background-color: #000000; color: #FFFFFF; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; font-family: 'Arial', sans-serif;">Search</button>
+            <input type="text" name="search" placeholder="Search" style="width: 200px; padding: 10px; border: 2px solid #3498db; border-radius: 5px; font-size: 16px; font-family: 'Arial', sans-serif; background-color: #FFFFFF; color: #333333;">
+            <button type="submit" style="background-color: #3498db; color: #FFFFFF; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; font-family: 'Arial', sans-serif;">Search</button>
         </form>
     </div>
 
     <!-- Awards list -->
-    <div style="background-color: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 20px; text-align: left;">
-
+    <div style="background-color: rgba(255, 255, 255, 0.1); border-radius: 10px; padding: 20px; text-align: left;">
         <ul style="list-style-type: none; padding: 0;">
             {% for award in awards %}
                 <li style="margin-bottom: 20px;">
                     <a href="{% url 'award_detail' award_id=award.id %}" style="text-decoration: none; color: #FFFFFF; font-size: 20px; font-weight: bold; font-family: 'Arial', sans-serif;">{{ award.award_name }}</a>
                 </li>
-                <hr style="margin: 10px 0; border: none; border-top: 1px solid #FFFFFF;">
             {% endfor %}
         </ul>
     </div>
-
 </div>
-
-<!-- Images outside the content block -->
-
 {% endblock %}
