--- a/iadsapp/templates/signin.html
+++ b/iadsapp/templates/signin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="signin-container">
-        <h1 class="project-name">GameCriticHub</h1>
+        <h1 class="project-name">NexaGame</h1>
         <h2>Sign In</h2>
         <form method="post" action="{% url 'signin' %}">
             {% csrf_token %}
@@ -27,7 +27,7 @@
             <p><a href="{% url 'forgot_password' %}">Forgot password?</a></p>
         </div>
         <div class="new-to-gamecritichub">
-            <p>New to GameCriticHub? <a href="{% url 'signup' %}">Sign Up</a></p>
+            <p>New to NexaGame? <a href="{% url 'signup' %}">Sign Up</a></p>
         </div>
     </div>
 </body>
