--- a/iadsapp/templates/signup.html
+++ b/iadsapp/templates/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="signup-container">
-        <h1 class="project-name">GameCriticHub</h1>
+        <h1 class="project-name">NexaGame</h1>
         <h2>Sign Up</h2>
         <form method="post" action="{% url 'signup' %}">
             {% csrf_token %}
