--- a/iadsapp/templates/top100_games.html
+++ b/iadsapp/templates/top100_games.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <!-- Left Column: Top 100 Games -->
                 <div class="col s12 m8">
-                    <h2 class="header teal-text text-lighten-2" style="display: inline-block; font-size: 1.5rem;">Top 100 Games On Ratings</h2>
+                    <h2 class="header blue-grey-text darken-4 " style="display: inline-block; font-size: 1.5rem;">Top 100 Games On Ratings</h2>
                 </div>
 
                 <!-- Right Column: Alphabetical Filter -->
@@ -42,9 +42,9 @@
                                     </div>
                                     <div class="card-content" style="height: 100px;">
                                         <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
-                                            <a href="{% url 'game_detail' game_id=game.id %}" class="game-link">{{ game.game_name }}</a>
+                                            <a class="blue-grey-text darken-4" href="{% url 'game_detail' game_id=game.id %}" class="game-link">{{ game.game_name }}</a>
                                         </span>
-                                        <p style="font-size: 0.8rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">Rating: {{ game.game_rating }}</p>
+                                        <span style="color: yellow; font-size: 24px;">&#9733;</span>Rating: {{ game.game_rating }}</p>
                                     </div>
                                 </div>
                             </div>
