Background image and logout button

--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -81,7 +81,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="{% static 'img/call.jpg'%}" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="{% static 'img/b.webp'%}" alt="Unsplashed background img 1"></div>
   </div>
 
 
