Edit user page Change password option

--- a/iadsapp/templates/edit_user.html
+++ b/iadsapp/templates/edit_user.html
@@ -60,7 +60,13 @@
                         {{ form.profile_pic }}
                          </div>
                         <input class="btn btn-primary" type="submit" value="Update Information">
+                         <br>
+                        <br>
                     </form>
+                   
+                    <div>
+                    <a class="btn btn-primary" href="{% url 'forgot_password' %}">Change Password</a>
+                    </div>
                 </div>
             </div>
         </div>
