--- a/iadsapp/templates/edit_user.html
+++ b/iadsapp/templates/edit_user.html
@@ -23,9 +23,9 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card card-body">
-                    <a class="btn btn-warning" href="{% url 'profilepage_view' %}"> &#8592; Back to Profile</a>
+                    <a class="btn btn-warning" href="{% url 'profilepage_view' %}" style="background-color: #263238; color: white;"> &#8592; Back to Profile</a>
                     <hr>
-                    <h3 style="text-align: center">Account Settings</h3>
+                    <h3 style="text-align: center" >Account Settings</h3>
                     <hr>
                     {% if custom_user.profile_pic %}
                         <img class="profile-pic" src="{{ custom_user.profile_pic.url }}" >
@@ -33,6 +33,7 @@
                         <img class="profile-pic" src="{% static 'img/user.png' %}" alt="Default Profile Pic">
                     {% endif %}
                 </div>
+                    
             </div>
             <div class="col-md-9">
                 <div class="card card-body">
@@ -56,16 +57,20 @@
                         </div>
                         <div class="form-group">
                             <label for="id_bio">Bio</label>
+                            <br>
                         {{ form.bio }}
+                            <br>
+                            <br>
+                            <label for="id_profile_pic">Choose Profile Pic</label>
                         {{ form.profile_pic }}
                          </div>
-                        <input class="btn btn-primary" type="submit" value="Update Information">
+                        <input class="btn btn-primary" type="submit" value="Update Information" style="background-color: #263238;">
                          <br>
                         <br>
                     </form>
-                   
+
                     <div>
-                    <a class="btn btn-primary" href="{% url 'forgot_password' %}">Change Password</a>
+                    <a class="btn btn-primary" href="{% url 'forgot_password' %}" style="background-color: #263238;">Change Password</a>
                     </div>
                 </div>
             </div>
