--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -62,15 +62,15 @@
                             <input id="search" type="text"  class="validate white-text"  name="q">
             <label for="search">Search</label>
         </div>
-        <div class="input-field col s12">
-            <select name="game_type" >
-                <option value="" selected>All</option>
-                {% for game_type in game_types %}
-                    <option value="{{ game_type.name }}">{{ game_type.name }}</option>
-                {% endfor %}
-            </select>
-
-        </div>
+{#        <div class="input-field col s12">#}
+{#            <select name="game_type" >#}
+{#                <option value="" selected>All</option>#}
+{#                {% for game_type in game_types %}#}
+{#                    <option value="{{ game_type.name }}">{{ game_type.name }}</option>#}
+{#                {% endfor %}#}
+{#            </select>#}
+{##}
+{#        </div>#}
         <button type="submit" class="waves-effect blue-grey darken-4 btn center-align" style="width: 950px;"><i class="material-icons left">search</i>Search</button>
     </div>
             </form>
