--- a/iadsapp/templates/games_by_genre.html
+++ b/iadsapp/templates/games_by_genre.html
@@ -20,8 +20,12 @@
 <div class="container">
     <div class="section">
         <!-- Game Search and Filter Section -->
-        <div class="row">
+        <div class="row" >
             <!-- Back button to game_type.html -->
+            <div class="col s12 text-right" >
+                <a href="{% url 'game_type' %}" class="btn blue-grey darken-4" >Back</a>
+            </div>
+
             <!-- Back button to game_type.html -->
 <div class="col s12 text-right" >
     <a href="{% url 'game_type' %}" class="btn" style="background-color: #37474F; color: white;">Back</a>
