--- a/iadsapp/templates/most_popular_games.html
+++ b/iadsapp/templates/most_popular_games.html
@@ -57,7 +57,7 @@ Most Popular Games
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ game.game_release }}</p>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ game.game_type }}</p>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">
-                                <span style="color: yellow; font-size: 24px;">&#9733;</span> {{ game.game_rating }}
+                                <span style="color: orange; font-size: 24px;">&#9733;</span> {{ game.game_rating }}
                             </p>
                         </div>
                     </div>
