--- a/iadsapp/templates/top100_games.html
+++ b/iadsapp/templates/top100_games.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <!-- Left Column: Top 100 Games -->
                 <div class="col s12 m8">
-                    <h2 class="header blue-grey-text darken-4 " style="display: inline-block; font-size: 1.5rem;">Top 100 Games On Ratings</h2>
+                    <h4 class="header blue-grey-text darken-4 " style="display: inline-block; font-size: 2.5rem;">Top 100 Games On Ratings</h4>
                 </div>
 
                 <!-- Right Column: Alphabetical Filter -->
@@ -35,6 +35,12 @@
                         {% for game in top_games %}
                             <div class="col s12 m6 l3">
                                 <div class="card">
+                                     <style>
+                        .card-image:hover {
+                            transform: scale(1.05); /* Example hover effect: increase size */
+                            transition: transform 0.3s ease; /* Example transition effect */
+                        }
+                    </style>
                                     <div class="card-image" style="height: 200px; overflow: hidden;">
                                         <a href="{% url 'game_detail' game_id=game.id %}">
                                             <img src="{% static game.game_image %}" alt="{{ game.game_name }}" class="game-image" style="object-fit: cover; height: 100%;">
@@ -44,7 +50,7 @@
                                         <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
                                             <a class="blue-grey-text darken-4" href="{% url 'game_detail' game_id=game.id %}" class="game-link">{{ game.game_name }}</a>
                                         </span>
-                                        <span style="color: yellow; font-size: 24px;">&#9733;</span>Rating: {{ game.game_rating }}</p>
+                                        <span style="color: orange; font-size: 24px;">&#9733;</span>Rating: {{ game.game_rating }}</p>
                                     </div>
                                 </div>
                             </div>
